call gs4_auth()

--- a/zichten.qmd
+++ b/zichten.qmd
@@ -35,6 +35,7 @@ library(lubridate)
 library(plotly)
 
 # options(gargle_oauth_email = TRUE)
+gs4_auth()
 
 sht = read_sheet(
   "https://docs.google.com/spreadsheets/d/1UNUKMf1Zw5eryhTJLgDyp4nKmKwi_Udg_dik56dpWIA/edit#gid=0"
